src/App.css
/* ... */
/* home layout starts here */
.home-page {
    font-family: Georgia, 'Times New Roman', Times, serif;

}

.home-page h1 {
    color: var(--secondary-color);
    margin: 3rem 0;
}

.home-page h2 {
    font-size: 5rem;
    color: var(--secondary-color);
}

.home-page p {
    font-size: 3rem;
    margin: 2rem 0;
}

.home-page-links {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 3rem 0;
    gap: 7rem;
    /* border: 1px solid var(--secondary-color); */
    padding: 10rem;
    /* box-shadow: 2px 2px 3px var(--box-shadow-color); */
    color: white;
}

.home-page-links a {
    font-size: 3rem;
    color: var(--main-color);
    border: 1px solid var(--secondary-color);
    padding: 3rem;
    box-shadow: 2px 2px 3px var(--box-shadow-color);
    font-weight: bolder;
    text-decoration: none;
    transition: var(--transition-all--300);
    border-radius: 10rem;
    -webkit-border-radius: 10rem;
    -moz-border-radius: 10rem;
    -ms-border-radius: 10rem;
    -o-border-radius: 10rem;
}

.home-page-links a:hover {
    transform: scale(1.1);
    background-color: var(--secondary-color);
    color: white;
    padding: 3rem;
    box-shadow: var(--box-shadow-color);
    border-radius: 1rem;
}

.text-centered {
    text-align: center;
}

h2.home__subtitle {
    font-size: 4.7rem;
    color: red;
}

h1.home__title {
    font-size: 6rem;
    text-align: center;
}

h2.home__subtitle--2 {
    font-size: 5.3rem;
    color: black;
    font-weight: bolder;
    text-align: center;
    padding: 2rem;
}

.home__title strong.span-black-color {
    font-size: 8rem;
    font-weight: bolder;
    color: black;
}

p.text-centered {
    font-size: 3.7rem;
    color: var(--secondary-color);
}

/* a.home__links {
    font-size: 3rem;
    text-decoration: underline;
} */

/* home layout ends here */

/* portfolio starts here */
.portfolio-container {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    gap: 1rem;
}

.article {
    flex-basis: 25%;
    margin-bottom: 2rem;
}

.mask {
    overflow: hidden;
}

.page-work .mask {
    width: 1200px;
    overflow: hidden;
}

/* .page-work.mask.img.work-img {
    width: 100%;
    height: auto;
    display: block;
    margin: 0 auto;
  } */
.img {
    width: 300px;
    transition: all 400ms ease-in-out;
    border-radius: 0.3rem;

}

.img:hover {
    transform: scale(1.1);

}

/* portfolio ends here */


/* services page starts here */
.services,
.blog__news {
    max-width: 1400px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    gap: 1rem;
    margin: 0 auto;
    margin-top: 3rem;
}

.service {
    padding: 2rem;
    /* border: 1px solid grey; */
    border-radius: 0.5rem;
    /* box-shadow: 2px 3px 3px grey; */
}

section.services article.service h2.h2,
h2.blog__subtitle {
    font-size: var(--p-font-size);
    /*  width: 25rem; */

}

.service__1 {
    flex-basis: 100%;
}

.service__2 {
    flex-basis: 100%;
}

.service__3 {
    flex-basis: 100%;
}

.service__4 {
    flex-basis: 100%;
}

.service__content {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: start;
    justify-content: start;
    gap: 1rem;
    margin: 0 auto;

}
.services__logo {
    width: 3rem;
}
.services__image__container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    gap: 3rem;
    margin: 0 auto;
    padding: 3rem;
}
.services__image {
    width: 30%;
    border-radius: 1rem;
    box-shadow: 2px 2px 4px var(--box-shadow-color);
    margin-top: 2rem;
}
.services__ul {
    padding: 3rem;
}
p.paragraph {
    font-size: var(--p-font-size);
    line-height: var(--p-line-height);
}

/* services page ends here */


/* BLog starts here */
/* .blog__news {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    text-align: start;
    padding: 5rem;
    gap: 3rem;
} */

h2.blog__subtitle {
    font-size: var(--h2-font-size);
    color: var(--text--color);
}

p.blog__content {
    font-size: var(--p-font-size);
    color: var(--main-color);
    font-weight: 600;
    line-height: 1.5;
}

/* BLog ends here */

/* contact starts here */
.contact-form {
    display: block;
    width: 100%;
    margin: 0 auto;
    gap: 1rem;
}

input,
textarea {
    width: 25rem;
    display: block;
    padding: 1rem;
    border-radius: 0.3rem;
    outline: none;
    border: 0.1rem solid grey;
    margin-top: 1.7rem;
}

button {
    width: 25rem;
    margin-top: 2rem;
    font-size: 1.6rem;
    border: 0;
    border-radius: 0.3rem;
    padding: 1rem;
    transition: var(--transition-all--300);
}

button:hover,
input[type='submit']:hover {
    background-color: var(--main-color);
    color: white;
}

/* contact ends here */
/* responsive design starts here */
@media screen and (width <=769px) {

    /* home layout starts here */
    h2.home__subtitle {
        font-size: 2rem;
    }

    h1.home__title,
    h2.home__subtitle--2 {
        font-size: 3rem;
    }

    .home__title strong.span-black-color {
        font-size: 5rem;
    }

    p.text-centered {
        font-size: 2rem;
    }

    a.home__links {
        font-size: 2rem;
    }

    .content {
        min-height: 20rem;
    }

    /* home layout ends here */
    /* footer starts here */
    .footer {
        min-height: 15rem;
        line-height: 20rem;
        margin-top: 5rem;
        padding-top: 1rem;
        gap: 2rem;
    }

    .footer p {
        font-size: 1.5rem;
        color: white;
    }
}
/* ... */

